sandbox/output
StringCalculator.java:8: error: cannot find symbol
        if(number.split(",").size() == 1){
                            ^
  symbol:   method size()
  location: class String[]
1 error
